--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Hunt Gallery</title>
+    <meta name="robots" content="noindex, nofollow">
+
+    <title>Chassocartes</title>
     
     <!-- Convex Client -->
     <script src="https://unpkg.com/convex@1.17.4/dist/browser.bundle.js"></script>
@@ -176,7 +178,7 @@
     <section class="section">
         <div class="container has-text-centered">
             <h1 class="title is-1 mb-2">
-                <i class="fa-solid fa-compass has-text-warning mr-3"></i>The Card Hunt
+                <i class="fa-solid fa-compass has-text-warning mr-3"></i>La Chassocartes
             </h1>
             <p class="subtitle has-text-white-ter is-6 mt-2">
                 Unseal the envelopes to reveal the discovered treasures.
